--- a/index.html
+++ b/index.html
@@ -30,16 +30,6 @@
       text-decoration: none;
       font-weight: bold;
     }
-    main {
-      padding: 20px;
-    }
-    section {
-      margin-bottom: 30px;
-    }
-    img {
-      max-width: 200px;
-      border-radius: 10px;
-    }
     .footer-text {
       font-size: 0.8em;
     }
@@ -52,68 +42,18 @@
   </header>
 
   <nav>
-    <a href="#about">About Me</a>
-    <a href="#career">Career Goal</a>
-    <a href="#experience">Experience</a>
-    <a href="#companies">Target Employers</a>
-    <a href="#interests">Interests</a>
-    <a href="#feedback">Feedback</a>
-    <a href="#sitemap">Site Map</a>
+    <a href="about.html">About Me</a>
+    <a href="career.html">Career Goal</a>
+    <a href="experience.html">Experience</a>
+    <a href="companies.html">Target Employers</a>
+    <a href="interests.html">Interests</a>
+    <a href="feedback.html">Feedback</a>
+    <a href="sitemap.html">Site Map</a>
   </nav>
 
   <main>
-    <section id="about">
-      <h2>About Me</h2>
-      <img src="my-photo.jpg" alt="My photo">
-      <p>I was born and raised in Huntington, West Virginia. My high school years were filled with sports and friendships that still last today. While I didn't gain much work experience due to my athletic commitments, I am incredibly grateful for my time at Marshall University, where I’ve made lifelong friends and unforgettable memories.</p>
-    </section>
-
-    <section id="career">
-      <h2>Career Mission</h2>
-      <p>My goal is to work in medical sales within a team-oriented environment. I aim to grow into a mid-to-senior level role where I can build strong professional relationships and explore future business opportunities beyond my core responsibilities.</p>
-    </section>
-
-    <section id="experience">
-      <h2>Educational and Work Experience</h2>
-      <p>I am currently pursuing a Business Management major with a Marketing minor. I've completed several internships with medical equipment sales representatives, observed surgeries, and gained insights into hospital operations. My athletic background has instilled in me strong teamwork, empathy, and leadership abilities.</p>
-    </section>
-
-    <section id="companies">
-      <h2>Potential Employers</h2>
-      <ul>
-        <li><a href="https://www.si-bone.com/" target="_blank">SI-Bone</a> – Specializes in solutions for sacroiliac joint dysfunction.</li>
-        <li><a href="https://www.stryker.com/" target="_blank">Stryker</a> – A global leader in neurotechnology and orthopedics.</li>
-        <li><a href="https://www.medtronic.com/" target="_blank">Medtronic</a> – One of the largest medical technology companies worldwide.</li>
-      </ul>
-    </section>
-
-    <section id="interests">
-      <h2>Personal Interests and Hobbies</h2>
-      <p>I enjoy playing soccer, attending live music events, and traveling to new places. I have also volunteered as a youth soccer coach and participated in community events through my church and Marshall’s soccer program.</p>
-      <ul>
-        <li><a href="https://www.fifa.com/" target="_blank">FIFA – Soccer News</a></li>
-        <li><a href="https://www.songkick.com/" target="_blank">Songkick – Live Music Tracker</a></li>
-        <li><a href="https://www.lonelyplanet.com/" target="_blank">Lonely Planet – Travel Inspiration</a></li>
-      </ul>
-    </section>
-
-    <section id="feedback">
-      <h2>Contact Me</h2>
-      <p>If you would like more information, feel free to send me an email.</p>
-      <a href="mailto:youremail@example.com?subject=Website%20Inquiry" style="display:none;">Hidden Mail Link</a>
-    </section>
-
-    <section id="sitemap">
-      <h2>Site Map</h2>
-      <ul>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#career">Career Goal</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#companies">Target Employers</a></li>
-        <li><a href="#interests">Personal Interests</a></li>
-        <li><a href="#feedback">Feedback</a></li>
-      </ul>
-    </section>
+    <h2>Welcome</h2>
+    <p>Select a page from the menu above to explore my career journey and personal interests.</p>
   </main>
 
   <footer>
