--- a/index.html
+++ b/index.html
@@ -2,62 +2,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Career Journey</title>
-  <style>
-    body {
-      background-color: #f4f4f9;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    header, footer {
-      background-color: #004d7a;
-      color: white;
-      padding: 1em;
-      text-align: center;
-    }
-    nav {
-      background: #006494;
-      padding: 10px;
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .footer-text {
-      font-size: 0.8em;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Personal Webpage</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+  <!-- Header Section -->
   <header>
-    <h1>Welcome to My Career Journey</h1>
-    <p>Personal E-Marketing Plan</p>
+    <h1>Your Name</h1>
+    <p>Aspiring Medical Sales Professional</p>
   </header>
 
+  <!-- Navigation Menu Bar -->
   <nav>
-    <a href="about.html">About Me</a>
-    <a href="career.html">Career Goal</a>
-    <a href="experience.html">Experience</a>
-    <a href="companies.html">Target Employers</a>
-    <a href="interests.html">Interests</a>
-    <a href="feedback.html">Feedback</a>
-    <a href="sitemap.html">Site Map</a>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="background.html">Background</a></li>
+      <li><a href="career_goal.html">Career Goal</a></li>
+      <li><a href="education.html">Education</a></li>
+      <li><a href="work_experience.html">Work Experience</a></li>
+      <li><a href="skills.html">Skills</a></li>
+      <li><a href="community.html">Community Involvement</a></li>
+      <li><a href="employers.html">Potential Employers</a></li>
+      <li><a href="interests.html">Personal Interests</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="sitemap.html">Sitemap</a></li>
+    </ul>
   </nav>
 
-  <main>
-    <h2>Welcome</h2>
-    <p>Select a page from the menu above to explore my career journey and personal interests.</p>
-  </main>
+  <!-- Home Page Content -->
+  <section id="home">
+    <h2>Welcome to My Personal Webpage!</h2>
+    <p>Hi, I'm [Your Name], an aspiring medical sales professional from Huntington, WV.</p>
+    <img src="your-photo.jpg" alt="Your Photo" class="profile-image">
+  </section>
 
+  <!-- Footer -->
   <footer>
-    <p class="footer-text">&copy; 2025 My Career Journey. All rights reserved. Website content is protected under U.S. copyright laws. Legal jurisdiction: West Virginia.</p>
+    <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+    <p><a href="mailto:your-email@example.com">Contact me</a></p>
   </footer>
+
 </body>
 </html>
