--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <section id="about" class="section about">
     <h2>About Me</h2>
-    <img src="https://via.placeholder.com/250" alt="A meaningful photo">
+    <img src="my-photo.jpg" alt="me">
     <p>I was born in Huntington, West Virginia, and I currently still live here. My high school experience was a lot of fun as I played a lot of sports and still have friends from high school that I still see today.</p>
     <p>There are times where I consider what could have been if I had left home, but I am extremely grateful for my time at Marshall University as it has allowed me to meet some of my lifelong friends and create memories that I will hold close for the rest of my life.</p>
     <h3>Career Mission / Goal</h3>
