--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Saul's Personal Website</title>
+  <title>Sal's Personal Website</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
 
   <section id="home" class="section home">
     <h1>Welcome to My Website!</h1>
-    <p>Hi, I'm Saul – a Business Management major and former college athlete excited to enter the medical sales industry.</p>
+    <p>Hi, I'm Sal – a Business Management major and former college athlete excited to enter the medical sales industry.</p>
   </section>
 
   <section id="about" class="section about">
@@ -54,7 +54,7 @@
       <p>Medical company focused on sacroiliac joint dysfunction, based in Santa Clara, CA.</p>
     </div>
     <div class="project">
-      <h3>Stryker</h3>
+      <h3>Stryker<a href="https://www.stryker.com/us/en/index.html" target="_blank" rel="noopener noreferrer">Visit Stryker</a></h3>
       <p>Multinational medical equipment company known for innovation in orthopedics and neurotechnology.</p>
     </div>
     <div class="project">
