--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
   <section id="portfolio" class="section portfolio">
     <h2>Portfolio</h2>
     <div class="project">
-      <h3>SI-Bone</h3>
+      <h3>SI-Bone <a href="https://si-bone.com" target="_blank" rel="noopener noreferrer">Visit SI-Bone</a> </h3>
       <p>Medical company focused on sacroiliac joint dysfunction, based in Santa Clara, CA.</p>
     </div>
     <div class="project">
-      <h3>Stryker<a href="https://www.stryker.com/us/en/index.html" target="_blank" rel="noopener noreferrer">Visit Stryker</a></h3>
+      <h3>Stryker <a href="https://www.stryker.com/us/en/index.html" target="_blank" rel="noopener noreferrer">Visit Stryker</a></h3>
       <p>Multinational medical equipment company known for innovation in orthopedics and neurotechnology.</p>
     </div>
     <div class="project">
-      <h3>Medtronic</h3>
+      <h3>Medtronic <a href="https://www.medtronic.com/en-us/index.html" target="_blank" rel="noopener noreferrer">Visit Medtronic</a></h3>
       <p>One of the world’s largest medical technology firms with a wide range of solutions across many fields.</p>
     </div>
   </section>
